# Stupid-ahh-noob-AI-relatedorsomething-projects

./: README.md
.devcontainer/: devcontainer.json
Image-classifier/: main.py  pyproject.toml
agentproj/: main.py  pyproject.toml
agentproj/agentproj/: finance.txt  main.py
late-chunking/: main.py  pyproject.toml
retrieve-ocr-chunk/: base.py  chunking.py  constants.py  deduplication.py  embedding.py  indexing.py  ingestion.py  main.py  main1.py  pyproject.toml  utils.py
retrieve-ocr-chunk/prepared_data_cpu/: chunks.jsonl  embeddings.npy  index.faiss  manifest.json  pages.jsonl
retrieve-ocr-chunk/preproccessed_data/: chunks.jsonl  embeddings.npy  index.faiss  manifest.json  pages.jsonl
simple-OCR/: main.py  pyproject.toml  requirements.txt
textcri/: main.py  pyproject.toml
