[project]
name = "retrieve-from-wiki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "faiss-cpu>=1.12.0",
    "fitz>=0.0.1.dev2",
    "nltk>=3.9.1",
    "pymupdf>=1.26.4",
    "pytesseract>=0.3.13",
    "sentence-transformers>=5.1.0",
    "wikipedia>=1.4.0",
]
