[project]
name = "simple-ocr"
version = "0.1.0"
description = "A simple OCR app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "pillow",
    "pytesseract",
    "easyocr (>=1.7.2,<2.0.0)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "st-img-pastebutton>=0.0.6",
    "openai>=1.106.0",
    "dotenv>=0.9.9",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
easyocr = "^1.7.1"
pymupdf = "^1.24.0"
opencv-python = "^4.10.0"
